--- a/src/_component/layout/base.pug
+++ b/src/_component/layout/base.pug
@@ -3,7 +3,7 @@ html(lang="en")
   block config
   head
       title Kawasaki Z1000
-      meta(name="description", content=myDescription)
+      meta(name="description", content="Kawasaki Z1000")
       //- this checks to see the the "embed" property is set to "true"
       //- in the package.json file
       if config.entry.css.embed
