--- a/src/style.scss
+++ b/src/style.scss
@@ -2,5 +2,5 @@
 @import '_component/config/reset';
 @import '_component/layout/layout';
 @import '_component/landing-page/landing-page';
-// @import '_component/header/header';
+@import '_component/content/content';
 // @import '_component/footer/footer';
